--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+html { 
+  overflow-y: hidden;
+  overflow-x: hidden;
+
+}
+
 .prog {
     display: flex;
     width: 100px;
@@ -56,7 +62,6 @@
   transition: 0.5s;
 }
 main {
-
   margin-top: 22px;
 }
 
@@ -64,18 +69,16 @@ main {
   max-width: 100%;
   width: 1300px;
   height: 400px;
-  z-index: 1;
 }
 .slideimg {
   opacity: 40%;
 }
 .mohtava {
   position:absolute;
-  bottom:68%
+  bottom: 80%;
 }
 .me {
 position: absolute;
 bottom:100%;
-left: 66%;
-
+left: 70%;
 }
