--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,17 @@ html {
 
 }
 
+@media screen and (max-width: 767px) {
+  html {
+    overflow-y: auto;
+  }
+  aside {
+    float: none;
+  }
+  .me{
+    visibility: hidden;
+  }
+}
 .prog {
     display: flex;
     width: 100px;
@@ -12,7 +23,10 @@ html {
     background: conic-gradient(#F6C345 var(--progress), black 0deg);
     font-size: 0;
   }
-  
+  aside {
+    float: left;
+    width: 20rem;
+  }
   .prog::after {
     content: attr(data-progress) '%';
     display: flex;
